Modified StandWithUkraine PR (#4450)
* translated /about/community.md page to Ukrainian

* feat: Added banner

* fix: Clarified message

* fix: Refactored CSS styles

* fix: Replaced link with redcross donate

* feat: Added page for support ukraine

* fix: Resolved typo

* fix: Resolved linter issues

* chore: streamline #StandWithUkraine content

This will allow it to pass CI immediately and we can adjust it for more
detailed content subsequently if desired.

* fixup! chore: streamline #StandWithUkraine content

* Update locale/en/site.json

Co-authored-by: Tobias Nießen <tniessen@tnie.de>

Co-authored-by: alexandrtovmach <alexandrtovmach@gmail.com>
Co-authored-by: Tobias Nießen <tniessen@tnie.de>

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -12,16 +12,14 @@
 
         {{{ contents }}}
 
-        {{#if site.banners.blacklivesmatter.visible}}
-          <div class="home-blacklivesmatterblock">
-            <a tabindex="0" role="button" aria-pressed="false" class="home-blacklivesmatterbutton" href="{{ site.banners.blacklivesmatter.link }}">{{ site.banners.blacklivesmatter.text }}</a>
-          </div>
-        {{/if}}
-
-        {{#if ( betweenDate site.banners.index.startDate site.banners.index.endDate ) }}
-          <p class="home-version home-version-banner">
-            <a href="{{ site.banners.index.link }}">{{ site.banners.index.text }}</a>
-          </p>
+        {{#if ( betweenDate site.banners.index.startDate site.banners.index.endDate )}}
+            {{#if site.banners.index.rawHTML}}
+              {{{ site.banners.index.rawHTML }}}
+            {{else}}}
+              <p class="home-version home-version-banner">
+                <a href="{{ site.banners.index.link }}">{{ site.banners.index.text }}</a>
+              </p>
+            {{/if}}
         {{/if}}
 
         <h2 id="home-downloadhead" data-dl-local="{{ labels.download-for }}">{{ labels.download }}</h2>
