--- a/layouts/css/page-modules/_home.scss
+++ b/layouts/css/page-modules/_home.scss
@@ -47,19 +47,6 @@
   }
 }
 
-.home-banner {
-  opacity: 1;
-  transition: opacity .2s ease-in-out;
-
-  &:hover {
-    opacity: .85;
-  }
-
-  > img {
-    border-radius: 2px;
-  }
-}
-
 .home-downloadblock {
   display: inline-block;
   margin: 0 8px;
@@ -90,14 +77,14 @@
  * BLM CTA button styles.
  */
 
-.home-blacklivesmatterblock {
+.home-banner {
   display: block;
   font-size: 16px;
   height: 4rem;
   position: relative;
 }
 
-.home-blacklivesmatterbutton {
+.home-banner-button {
   color: $white !important;
   display: block;
   font-size: 130%;
