Added theme changing transition. (#4477)
* Added dark mode transition time when switching from light or dark mode as suggested by #4441.

Also fixes when the footer would have no margin in dark mode.

* Remove commented line

* Update to comply with linters

* Slight changes after testing on mobile.

- Changed body background from hex code to variable.
- Only remove footer on small screens.

Co-authored-by: Rich Trott <rtrott@gmail.com>

--- a/layouts/css/layout/_dark-theme.scss
+++ b/layouts/css/layout/_dark-theme.scss
@@ -3,6 +3,10 @@
     background-image: url("/static/images/light-mode.svg");
   }
 
+  body {
+    background-color: $dark-black;
+  }
+
   body,
   .blogpost-meta {
     color: $white;
@@ -99,7 +103,11 @@
   }
 
   footer {
-    margin-top: 0 !important;
+
+    @media (max-width: 481px) {
+      margin-top: 0 !important;
+    }
+
     background-color: $dark-black2;
     .openjsfoundation-footer {
       background-color: $dark-black2;
