Change language picker icon (#4503)
* Added dark mode transition time when switching from light or dark mode as suggested by #4441.

Also fixes when the footer would have no margin in dark mode.

* Remove commented line

* Update to comply with linters

* Slight changes after testing on mobile.

- Changed body background from hex code to variable.
- Only remove footer on small screens.

* Use languageicon.org's language picker icon

* Change image alt

* Use dark and light SVGs for language picker icons

* Optimize SVG and insert directly into HTML

* Add transition time variable

Since dark mode transition time is used in multiple places, I added a variable so if it needs to be changed it can be changed easily.

* Use optimized SVG from XhmikosR

* Decrease svg viewbox, and scale down

* Update header.hbs

* Update header.hbs

Co-authored-by: Rich Trott <rtrott@gmail.com>
Co-authored-by: XhmikosR <xhmikosr@gmail.com>

--- a/layouts/css/_variables.scss
+++ b/layouts/css/_variables.scss
@@ -19,6 +19,7 @@ $black-alpha-12: #00000012;
 $black-alpha-0f: #0000000f;
 
 // for dark-theme
+$dark-transition-time: .24s;
 $dark-black: #090c15;
 $dark-black2: #233056;
 $dark-black3: #23305671;
