fix: allowing release schedule table to be responsive (#4649)
adjusting styling for release schedule table to allow for responsiveness

closes #4628

--- a/layouts/css/page-modules/_release-schedule.scss
+++ b/layouts/css/page-modules/_release-schedule.scss
@@ -6,6 +6,8 @@ table.release-schedule {
   border-collapse: separate;
   border-spacing: 0;
   overflow: hidden;
+  display: block;
+  overflow-x: scroll;
 
 
   td,
