chore: use OpenJS Foundation recommended footer (#4725)
* chore: use OpenJS Foundation recommended footer

Refs: https://github.com/openjs-foundation/artwork#copyright-notices-for-project-website-footers

* fixup! chore: use OpenJS Foundation recommended footer

* fixup! fixup! chore: use OpenJS Foundation recommended footer

--- a/layouts/css/page-modules/_jsfoundation.scss
+++ b/layouts/css/page-modules/_jsfoundation.scss
@@ -1,15 +1,15 @@
 .openjsfoundation-footer {
   padding: 1em 20px;
-  font-size: 14px;
+  font-size: small;
   color: $white;
   background: $node-gray;
   direction: ltr;
-  width: 60%;
+  text-align: center;
+  width: 100%;
   float: left;
 
   p + p {
-    margin-top: 0;
-    margin-bottom: .25em;
+    font-size: medium;
   }
 }
 
