--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -4,32 +4,8 @@
 
   <div class="container">
     <div class="openjsfoundation-footer">
-      <div class="issue-link-container">
-        <a class="openjsfoundation-logo" href="https://openjsf.org/">
-          <img src="/static/images/openjs_foundation-logo.svg" alt="OpenJS Foundation" width="120" height="38">
-        </a>
-      </div>
-    <p>© OpenJS Foundation. All Rights Reserved. Portions of this site originally © Joyent.</p>
-    <p>Node.js is a trademark of the OpenJS Foundation. Please review the <a
-        href="https://trademark-list.openjsf.org">Trademark List</a> and <a
-        href="https://trademark-policy.openjsf.org">Trademark Guidelines</a> of the <a href="https://openjsf.org">OpenJS
-        Foundation</a>.</p>
-    <p>
-      <a href="https://raw.githubusercontent.com/nodejs/node/main/LICENSE">Node.js Project Licensing
-        Information</a>.
-    </p>
-    </div>
-
-    <div class="help">
-      <ul>
-        <li><a id="editOnGitHubLink" href="#">{{site.editOnGithub}}</a></li>
-        <li><a href="https://github.com/nodejs/node/issues">{{site.reportNodeIssue}}</a></li>
-        <li><a href="https://github.com/nodejs/nodejs.org/issues">{{site.reportWebsiteIssue}}</a></li>
-        <li><a href="https://github.com/nodejs/help/issues">{{site.getHelpIssue}}</a></li>
-        <li>
-          <a href="https://github.com/nodejs/nodejs.org/blob/master/CONTRIBUTING.md">{{site.Contributing}}</a>
-        </li>
-      </ul>
+      <p>Copyright <a href="https://openjsf.org">OpenJS Foundation</a> and Node.js contributors. All rights reserved. The <a href="https://openjsf.org">OpenJS Foundation</a> has registered trademarks and uses trademarks.  For a list of trademarks of the <a href="https://openjsf.org">OpenJS Foundation</a>, please see our <a href="https://trademark-policy.openjsf.org">Trademark Policy</a> and <a href="https://trademark-list.openjsf.org">Trademark List</a>.  Trademarks and logos not indicated on the <a href="https://trademark-list.openjsf.org">list of OpenJS Foundation trademarks</a> are trademarks&trade; or registered&reg; trademarks of their respective holders. Use of them does not imply any affiliation with or endorsement by them.</p>
+      <p><a href="https://openjsf.org">The OpenJS Foundation</a> | <a href="https://terms-of-use.openjsf.org">Terms of Use</a> | <a href="https://privacy-policy.openjsf.org">Privacy Policy</a> | <a href="https://bylaws.openjsf.org">Bylaws</a> | <a href="https://code-of-conduct.openjsf.org">Code of Conduct</a> | <a href="https://trademark-policy.openjsf.org">Trademark Policy</a> | <a href="https://trademark-list.openjsf.org">Trademark List</a> | <a href="https://www.linuxfoundation.org/cookies">Cookie Policy</a></p>
     </div>
   </div>
 
