fix: re-Add the "Edit On GitHub" (#4740)
"Edit on GitHub" was removed at #4725, and this is the fix for it.

--- a/layouts/css/page-modules/_jsfoundation.scss
+++ b/layouts/css/page-modules/_jsfoundation.scss
@@ -9,8 +9,17 @@
   float: left;
 
   p + p {
-    font-size: medium;
+    font-size: 15px;
   }
+}
+
+.openjsfoundation-footer-edit {
+  display: inline;
+  font-size: 15px;
+}
+
+.openjsfoundation-footer-links {
+  display: inline;
 }
 
 .issue-link-container {
