feat: Beauty of Node.js previous versions list (#4757)
1. Beauty the table in verticle-alignment to make words and pageList
center.

2. Light the current choosen page number.

3. Force copy the fancyTable.js/jQuery.js/previousVersion.js to the
   release folder.

--- a/layouts/css/page-modules/_download.scss
+++ b/layouts/css/page-modules/_download.scss
@@ -1,3 +1,8 @@
+.download-table-currentpage {
+  background-color: $node-green;
+  color: $white;
+}
+
 .download-header {
   h1 {
     width: 40%;
@@ -141,6 +146,7 @@ h5.download-table-previous-releases-header {
   font-size: small;
   border: 1px solid $light-gray2;
   border-spacing: 0;
+  text-align: center;
 
   td {
     padding: 5px;
