Revert "refer people to release repo for release schedule (#4821)" (#4828)
This reverts commit d63d20644c41c825173d43b3e2eb124f9a5c9c2b.

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -76,7 +76,7 @@
         {{/unless}}
         {{/if}}
         <p>
-          {{{ labels.version-schedule-prompt }}} <a href="https://github.com/nodejs/release#release-schedule">{{ labels.version-schedule-prompt-link-text }}</a>
+          {{{ labels.version-schedule-prompt }}} <a href="/{{site.locale}}/about/releases/">{{ labels.version-schedule-prompt-link-text }}</a>
         </p>
       </div>
 
