Make dark scroll bar in dark theme (#4856)
Make dark scroll bar in dark theme

--- a/layouts/css/layout/_dark-theme.scss
+++ b/layouts/css/layout/_dark-theme.scss
@@ -1,4 +1,6 @@
 [data-theme="dark"] {
+  color-scheme: dark;
+
   .dark-theme-switcher {
     background-image: url("/static/images/light-mode.svg");
   }
