remove useless js snippets of codes for "Edit On GitHub" (#4867)
We don't need to implement it through the client side but serve side only by generating them together.

Refs: https://github.com/nodejs/nodejs.org/pull/4315.

--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -14,10 +14,8 @@
         <a href="https://trademark-policy.openjsf.org">Trademark Policy</a> | 
         <a href="https://trademark-list.openjsf.org">Trademark List</a> | 
         <a href="https://www.linuxfoundation.org/cookies">Cookie Policy</a>
-        </p>
-        <div class="openjsfoundation-footer-edit">
-             | <a id="editOnGitHubLink" href="#">{{site.editOnGithub}}</a>
-        </div>
+      </p>
+        <div class="openjsfoundation-footer-edit"></div>
     </div>
   </div>
 
